# nearcon22

./: .gitignore  Cargo.toml  README.md  build.sh
contract/: Cargo.toml
contract/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml  build.rs
neardev/: dev-account  dev-account.env
web/client/: package.json  webpack.config.js
web/client/merkle/: Cargo.toml
web/client/merkle/pkg/: drop_merkle.d.ts  drop_merkle.js  drop_merkle_bg.js  drop_merkle_bg.wasm  drop_merkle_bg.wasm.d.ts  drop_ui_merkle.js  drop_ui_merkle_bg.wasm  package.json
web/client/merkle/src/: lib.rs  merkle.rs
web/client/public/: template.csv
web/client/src/: App.tsx  index.tsx  main.css  near-config.ts
web/client/src/components/Header/: index.tsx
web/client/src/components/NoData/: index.tsx
web/client/src/constants/: addresses.ts  routes.ts  urls.ts
web/client/src/contexts/: walletSelectorContext.tsx
web/client/src/contracts/: airdrop.ts
web/client/src/hooks/: useClient.tsx  useGetCid.tsx  useLoadFiles.tsx  useTokenBalance.tsx
web/client/src/pages/Claim/: ClaimPage.tsx  index.tsx
web/client/src/pages/Create/: index.tsx
web/client/src/pages/Deposit/: index.tsx
web/client/src/pages/Home/: index.tsx
web/client/src/pkg/: drop_merkle.d.ts  drop_merkle_bg.wasm  package.json
web/client/src/theme/: index.tsx
web/client/src/utils/: wallet.ts  window.ts
web/server/: Cargo.toml
web/server/src/: lib.rs  main.rs
