[package]
name = "drop-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1"
near-contract-standards = "3.1.0"
drop-core = { path="../core" }
base64ct = { version = "1.0.1", features = ["alloc"] }
merkle_light = { version = "0.4.0" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true