[package]
name = "drop-host"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

drop-core = { path = "../core" }
drop-methods = { path = "../methods" }
risc0-zkvm-host = "0.10"
risc0-zkvm-serde = "0.10"
